--- a/BookLibrary.Database/BookLibrary.Database.csproj
+++ b/BookLibrary.Database/BookLibrary.Database.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
       <PackageReference Include="Npgsql" Version="9.0.2" />
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.2.0" />
