--- a/BookLibrary.Logic/BookLibrary.Logic.csproj
+++ b/BookLibrary.Logic/BookLibrary.Logic.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\BookLibrary.Database\BookLibrary.Database.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    </ItemGroup>
+
 </Project>
