--- a/BookLibrary.Api/BookLibrary.Api.csproj
+++ b/BookLibrary.Api/BookLibrary.Api.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.72" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
@@ -16,6 +17,8 @@
         </PackageReference>
         <PackageReference Include="Npgsql" Version="9.0.2" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
+        <PackageReference Include="PuppeteerSharp" Version="20.0.5" />
+        <PackageReference Include="PuppeteerSharp.Contrib.Extensions" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
