--- a/BookLibrary.Database/BookLibrary.Database.csproj
+++ b/BookLibrary.Database/BookLibrary.Database.csproj
@@ -8,8 +8,12 @@
 
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.72" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql" Version="9.0.2" />
+      <PackageReference Include="PuppeteerSharp" Version="20.0.5" />
+      <PackageReference Include="PuppeteerSharp.Contrib.Extensions" Version="7.0.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.2.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.2.0" />
