--- a/BookLibrary.Api/appsettings.json
+++ b/BookLibrary.Api/appsettings.json
@@ -2,33 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.Authentication": "Debug"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "GoogleBooks": {
-    "ApiKey": "AIzaSyAoc6sfOPkRs_kx5CreoifrJVX4aZelOKQ"
-  },
-  "Ticketmaster": {
-    "ApiKey": "aPlW1vdu2wHsOV0pvRfsQuzIrpUa3mCO"
-  },
-  
   "ConnectionStrings": {
-    "BooksDbConnection": "Host=localhost;Port=5432;Database=books_db;Username=postgres;Password=your_password",
-    "UserDataDbConnection": "Host=localhost;Port=5432;Database=userdata_db;Username=postgres;Password=your_password"
-  },
-  "profiles": {
-    "BookLibrary.Api": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7121;http://localhost:5121",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    }
+    "DefaultConnection": "Host=localhost;Port=5432;Database=books_db;Username=postgres;Password=your_password"
   }
+
 }
-
-
